--- a/layout-para/van/style.css
+++ b/layout-para/van/style.css
@@ -1,10 +1,11 @@
 html,body{
-    height:100%;
+    height: 100%;
+    margin: 0%;
 }
-body {
+.hihi {
     background-image: url("./img/backgroundpara.png");
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 120%
 }
 p {
     font-style: normal;
@@ -24,8 +25,8 @@ span {
     box-sizing: border-box;
     box-shadow: 5px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
-    margin: auto;
-    margin-top:1%;
+    margin:  auto;
+    margin-top: 1%;
 }
 .text {
     margin-top: 13%;
