--- a/layout-para/van/style.css
+++ b/layout-para/van/style.css
@@ -13,6 +13,7 @@ p {
     font-size: 26px;
     line-height: 30px;
     text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 span {
     color:red;
@@ -60,4 +61,5 @@ button {
     line-height: 30px;
     text-align: center;
     color: #FFFFFF;
+    border-style: hidden;
 }
